Address more Claude feedback